Services/mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: wordpress
spec:
  containers:
    - image: mysql:5.6
      name: mysql
      volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      ports:
        - containerPort: 3306
  volumes:
    - name: mysql-persistent-storage
      persistentVolumeClaim:
        claimName: ebs-mysql-pv-claim
